--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "npx eslint --fix . --ext .ts",
     "test": "jest",
     "build": "rimraf dist && tsc",
+    "release": "standard-version -t ''",
     "prepare": "husky"
   },
   "repository": {
@@ -61,6 +62,7 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "standard-version": "^9.5.0",
     "typescript": "^5.3.3"
   },
   "lint-staged": {
