--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "prettier": "npx prettier --write \"**/*.{js,jsx,ts,tsx,json,html,vue}\"",
     "eslint": "npx eslint --fix . --ext .ts",
-    "test": "jest",
+    "test": "jest --no-cache --testTimeout=20000 --forceExit --all 'src/'",
     "build": "rimraf dist && tsc",
     "release": "standard-version -t ''",
     "prepare": "husky"
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -56,6 +57,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.10",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "mobx": "^6.11.0",
     "mobx-react": "^9.1.0",
@@ -63,6 +65,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "standard-version": "^9.5.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
   "lint-staged": {
