--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "include": [
       "src/**/*.ts",
       "types/*.d.ts"
-    ]
+, "src/tests/mockData.tsx", "src/tests/utils.test.tsx"    ]
   }
